infra/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formsai-ingress
  namespace: team-kruschefan-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: team-kruschefan.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 8080

  - host: keycloak.team-kruschefan.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080
